exports[`<ErrorPage /> render matches previous snapshot 1`] = `
<section
  className="error-page">
  <div
    className="container">
    <div
      className="col-xs-12 col-md-offset-1 col-md-10 col-lg-offset-1 col-lg-10">
      <div
        className="logo-container">
        <img
          alt=""
          aria-hidden="true"
          src="/images/logo-FirstNet-local-control.svg" />
      </div>
      <h1
        className="as-h3">
        You\'ve encountered a permissions error.
      </h1>
      <p
        dangerouslySetInnerHTML={
          Object {
            "__html": "Unfortunately, you do not have permission to view this page. If you think this is in error, please contact your site administrator, or continue to one of the FirstNet Sites below:"
          }
        } />
      <nav
        aria-label="FirstNet Sites"
        className="sites-list">
        <ul>
          <li>
            <a
              href="https://apps-qa.sapientfirst.net">
              Apps
            </a>
          </li>
          <li>
            <a
              href="https://devcon-qa.sapientfirst.net">
              App Control
            </a>
          </li>
          <li>
            <a
              href="https://pse-qa.sapientfirst.net">
              Local Control
            </a>
          </li>
        </ul>
      </nav>
      <div
        className="logout-block">
        <hr
          className="or" />
        <a
          href="https://oidc.stage.flogin.att.com/isam/oidc/endpoint/amapp-runtime-SSPRS/authorize?response_type=id_token+token&client_id=m11635&state=FWpMHzl61gXfcnMmwkp4&&scope=openid&nonce=dsZHN5kvm2a4cVIA0ZdN&response_mode=form_post">
          Log Out
        </a>
      </div>
    </div>
  </div>
</section>
`;

exports[`<ErrorPage /> render shows Access Denied for authorization problem 1`] = `
<section
  className="error-page">
  <div
    className="container">
    <div
      className="col-xs-12 col-md-offset-1 col-md-10 col-lg-offset-1 col-lg-10">
      <div
        className="logo-container">
        <img
          alt=""
          aria-hidden="true"
          src="/images/logo-FirstNet-local-control.svg" />
      </div>
      <h1
        className="as-h3">
        You\'ve encountered a permissions error.
      </h1>
      <p
        dangerouslySetInnerHTML={
          Object {
            "__html": "Unfortunately, you do not have permission to view this page. If you think this is in error, please contact your site administrator, or continue to one of the FirstNet Sites below:"
          }
        } />
      <nav
        aria-label="FirstNet Sites"
        className="sites-list">
        <ul>
          <li>
            <a
              href="https://apps-qa.sapientfirst.net">
              Apps
            </a>
          </li>
          <li>
            <a
              href="https://devcon-qa.sapientfirst.net">
              App Control
            </a>
          </li>
          <li>
            <a
              href="https://pse-qa.sapientfirst.net">
              Local Control
            </a>
          </li>
        </ul>
      </nav>
      <div
        className="logout-block">
        <hr
          className="or" />
        <a
          href="https://oidc.stage.flogin.att.com/isam/oidc/endpoint/amapp-runtime-SSPRS/authorize?response_type=id_token+token&client_id=m11635&state=FWpMHzl61gXfcnMmwkp4&&scope=openid&nonce=dsZHN5kvm2a4cVIA0ZdN&response_mode=form_post">
          Log Out
        </a>
      </div>
    </div>
  </div>
</section>
`;

exports[`<ErrorPage /> render shows Access Denied for authorization problem 2`] = `
<section
  className="error-page">
  <div
    className="container">
    <div
      className="col-xs-12 col-md-offset-1 col-md-10 col-lg-offset-1 col-lg-10">
      <div
        className="logo-container">
        <img
          alt=""
          aria-hidden="true"
          src="/images/logo-FirstNet-local-control.svg" />
      </div>
      <h1
        className="as-h3">
        We\'re Sorry.
      </h1>
      <p
        dangerouslySetInnerHTML={
          Object {
            "__html": "This page is experiencing an issue. Try again later, or continue to one of the FirstNet Sites below:"
          }
        } />
      <nav
        aria-label="FirstNet Sites"
        className="sites-list">
        <ul>
          <li>
            <a
              href="https://apps-qa.sapientfirst.net">
              Apps
            </a>
          </li>
          <li>
            <a
              href="https://devcon-qa.sapientfirst.net">
              App Control
            </a>
          </li>
          <li>
            <a
              href="https://pse-qa.sapientfirst.net">
              Local Control
            </a>
          </li>
        </ul>
      </nav>
    </div>
  </div>
</section>
`;

exports[`<ErrorPage /> render shows App Unavailable on 410 1`] = `
<section
  className="error-page">
  <div
    className="container">
    <div
      className="col-xs-12 col-md-offset-1 col-md-10 col-lg-offset-1 col-lg-10">
      <div
        className="logo-container">
        <img
          alt=""
          aria-hidden="true"
          src="/images/logo-FirstNet-local-control.svg" />
      </div>
      <h1
        className="as-h3">
        App Unavailable
      </h1>
      <p
        dangerouslySetInnerHTML={
          Object {
            "__html": "The app you requested is no longer available."
          }
        } />
      <section>
        <a
          className="fn-primary"
          href="/"
          onClick={[Function anonymous]}>
          Return to Home Page
        </a>
      </section>
    </div>
  </div>
</section>
`;

exports[`<ErrorPage /> render shows Generic message otherwise 1`] = `
<section
  className="error-page">
  <div
    className="container">
    <div
      className="col-xs-12 col-md-offset-1 col-md-10 col-lg-offset-1 col-lg-10">
      <div
        className="logo-container">
        <img
          alt=""
          aria-hidden="true"
          src="/images/logo-FirstNet-local-control.svg" />
      </div>
      <h1
        className="as-h3">
        We\'re Sorry.
      </h1>
      <p
        dangerouslySetInnerHTML={
          Object {
            "__html": "This page is experiencing an issue. Try again later, or continue to one of the FirstNet Sites below:"
          }
        } />
      <nav
        aria-label="FirstNet Sites"
        className="sites-list">
        <ul>
          <li>
            <a
              href="https://apps-qa.sapientfirst.net">
              Apps
            </a>
          </li>
          <li>
            <a
              href="https://devcon-qa.sapientfirst.net">
              App Control
            </a>
          </li>
          <li>
            <a
              href="https://pse-qa.sapientfirst.net">
              Local Control
            </a>
          </li>
        </ul>
      </nav>
    </div>
  </div>
</section>
`;

exports[`<ErrorPage /> render shows Permission Pending 1`] = `
<section
  className="error-page">
  <div
    className="container">
    <div
      className="col-xs-12 col-md-offset-1 col-md-10 col-lg-offset-1 col-lg-10">
      <div
        className="logo-container">
        <img
          alt=""
          aria-hidden="true"
          src="/images/logo-FirstNet-local-control.svg" />
      </div>
      <h1
        className="as-h3">
        Account permissions pending.
      </h1>
      <p
        dangerouslySetInnerHTML={
          Object {
            "__html": "Permissions for new accounts may take up to 24 hours to properly sync and some pages may not be immediately available.  Please try accessing this page again later."
          }
        } />
      <section>
        <button
          onClick={[Function onClick]}>
          Go Back
        </button>
      </section>
    </div>
  </div>
</section>
`;

exports[`<ErrorPage /> render shows Service Error for authentication problem 1`] = `
<section
  className="error-page">
  <div
    className="container">
    <div
      className="col-xs-12 col-md-offset-1 col-md-10 col-lg-offset-1 col-lg-10">
      <div
        className="logo-container">
        <img
          alt=""
          aria-hidden="true"
          src="/images/logo-FirstNet-local-control.svg" />
      </div>
      <h1
        className="as-h3">
        Service Issue.
      </h1>
      <p
        dangerouslySetInnerHTML={
          Object {
            "__html": "This page is experiencing an issue. Try again later, or continue to one of the FirstNet Sites below:"
          }
        } />
      <nav
        aria-label="FirstNet Sites"
        className="sites-list">
        <ul>
          <li>
            <a
              href="https://apps-qa.sapientfirst.net">
              Apps
            </a>
          </li>
          <li>
            <a
              href="https://devcon-qa.sapientfirst.net">
              App Control
            </a>
          </li>
          <li>
            <a
              href="https://pse-qa.sapientfirst.net">
              Local Control
            </a>
          </li>
        </ul>
      </nav>
    </div>
  </div>
</section>
`;

exports[`<ErrorPage /> render shows Sorry for Page Not Found (404) 1`] = `
<section
  className="error-page">
  <div
    className="container">
    <div
      className="col-xs-12 col-md-offset-1 col-md-10 col-lg-offset-1 col-lg-10">
      <div
        className="logo-container">
        <img
          alt=""
          aria-hidden="true"
          src="/images/logo-FirstNet-local-control.svg" />
      </div>
      <h1
        className="as-h3">
        We\'re Sorry.
      </h1>
      <p
        dangerouslySetInnerHTML={
          Object {
            "__html": "The page you were looking for could not be found."
          }
        } />
      <section>
        <button
          onClick={[Function onClick]}>
          Go Back
        </button>
      </section>
    </div>
  </div>
</section>
`;
